--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.euromc</groupId>
-    <artifactId>McMessages</artifactId>
-    <version>1.0</version>
+    <artifactId>PaperMessages</artifactId>
+    <version>0.1</version>
     <packaging>jar</packaging>
 
-    <name>McMessages</name>
+    <name>PaperMessages</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -61,6 +61,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>glaremasters repo</id>
+            <url>https://repo.glaremasters.me/repository/towny/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -69,6 +73,11 @@
             <artifactId>paper-api</artifactId>
             <version>1.19.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.townyadvanced.commentedconfiguration</groupId>
+            <artifactId>CommentedConfiguration</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
