--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: McMessages
+name: PaperMessages
 version: '${project.version}'
 main: net.euromc.papermessages.MessagesMain
 folia-supported: true
@@ -6,7 +6,7 @@ api-version: '1.19'
 commands:
   reply:
     aliases: [r , rpl]
-    description: Reply to a message.
+    usage: /r [content]
   message:
-    aliases: [msg , w , whisper , pm]
-    description: Send a message.
+    aliases: [msg, w , whisper , pm]
+    usage: /msg [ign] [content]
