--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,12 +1,9 @@
 name: PaperMessages
-version: '${project.version}'
-main: net.euromc.papermessages.MessagesMain
+version: '1.0'
+main: net.mvndicraft.papermessages.PaperMessages
 folia-supported: true
-api-version: '1.19'
-#commands:
-#  reply:
-#    aliases: [r , rpl]
-#    usage: /r [content]
-#  message:
-#    aliases: [msg, w , whisper , pm]
-#    usage: /msg [ign] [content]
+api-version: '1.20'
+permissions:
+  papermessages.admin:
+    description: "Allows use of the reload command."
+    default: op
